assets/css/app.scss
/* ... */
/* ----------- iPhone 6 ----------- */
/* iPhone 6 Portrait */
@media screen and (min-width : 375px) and (max-width : 667px) {

  // LHS is orig, RHS is offset
  h3 {
    font-size: 1.75rem + 0.2;
  }

  h4 {
    font-size: 1.5rem + 0.2;
  }

  body {
    --bs-body-font-size: 1.4rem;
    --bs-body-line-height: 1.7;
  }

  header {
    .navbar {
      a {
        font-size: 28px;
      }
    }

    .row {
      .category {
        padding-top: 40px;
        padding-bottom: 20px;
        padding-left: 0px;
        padding-right: 0px;
        height: 80px;
        // border: 1px solid red;

        a {
          font-size: 17px;
          // border: 1px solid blue;
          margin-left: 0px;

        }
      }

      .category:first-of-type {
        border: 0px;
      }
    }
  }

  article.preview,
  article.show,
  main {

    h1,
    h2,
    h3,
    h4,
    h5,
    .tag_page_title {
      white-space: normal;
      overflow: auto;
    }

    .summary,
    .content {
      padding-bottom: 30px;
      padding-right: 0px;
    }
  }

  .related {
    display: none;
  }

  .meta {
    .last-fm {
      .track {
        svg {
          width: calc(var(--bs-body-font-size) - 5px);
          height: calc(var(--bs-body-font-size) - 5px);
        }
      }
    }
  }

  footer {
    .row {
      .links {
        margin-top: 40px;
        height: 40px;
        padding-bottom: 20px;
      }
    }
  }
}

/* iPhone 6 Landscape */
@media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (orientation : landscape) {
  header {
    .row {
      .category:first-of-type {
        border: 0px;
      }
    }
  }
}

/* ----------- iPad 3 and 4 ----------- */
/* Portrait and Landscape */
@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {

  header {
    .row {
      .category {

        // border: 1px solid red;
        a {}

      }

      .category:first-of-type {
        border: 0px;
      }
    }
  }

  article.preview,
  article.show,
  main {

    .summary,
    .content {
      padding-bottom: 50px;
      padding-right: 0px;
    }
  }

  .meta aside {
    padding-left: 20px;
  }

  .related {
    display: none;
  }

  footer {
    .row {
      .links {
        margin-left: 10px;
        margin-top: 40px;
        height: 40px;
        padding-bottom: 20px;
      }
    }
  }
}

/* ----------- iPad mini / 1 & 2 ----------- */

/* Portrait and Landscape */
@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {

  header {
    .row {
      .category {
        padding-bottom: 20px;
        height: 40px;

        // border: 1px solid red;
        a {}

      }

      .category:first-of-type {
        border: 0px;
      }
    }
  }

  article.preview,
  article.show,
  main {

    .summary,
    .content {
      padding-bottom: 40px;
      padding-right: 0px;
    }
  }

  .meta aside {
    padding-left: 20px;
  }

  .related {
    display: none;
  }

  footer {
    .row {
      .links {
        margin-left: 10px;
        margin-top: 40px;
        height: 40px;
        padding-bottom: 20px;
      }
    }
  }
}

/* Landscape */
@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {

  header {
    .row {
      .category {
        border: 0px solid green;
        padding-top: 75px;

        a {}
      }
    }
  }
}



/* Effect 1: Brackets */
.cl-effect-1 a::before,
.cl-effect-1 a::after {
  // display: inline-block;
  opacity: 0;
  -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
  -moz-transition: -moz-transform 0.3s, opacity 0.2s;
  transition: transform 0.3s, opacity 0.2s;
}

.cl-effect-1 a::before {
  margin-right: 10px;
  content: '[';
  -webkit-transform: translateX(20px);
  -moz-transform: translateX(20px);
  transform: translateX(20px);
}

.cl-effect-1 a::after {
  margin-left: 10px;
  content: ']';
  -webkit-transform: translateX(-20px);
  -moz-transform: translateX(-20px);
  transform: translateX(-20px);
}

.cl-effect-1 a:hover::before,
.cl-effect-1 a:hover::after,
.cl-effect-1 a:focus::before,
.cl-effect-1 a:focus::after {
  opacity: 1;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  transform: translateX(0px);
}

/* END Effect 1: Brackets */

